; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/x509v3/extr_v3_conf.c_X509V3_EXT_i2d.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/x509v3/extr_v3_conf.c_X509V3_EXT_i2d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@X509V3_F_X509V3_EXT_I2D = common dso_local global i32 0, align 4
@X509V3_R_UNKNOWN_EXTENSION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @X509V3_EXT_i2d(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32* @X509V3_EXT_get_nid(i32 %9)
  store i32* %10, i32** %8, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %3
  %13 = load i32, i32* @X509V3_F_X509V3_EXT_I2D, align 4
  %14 = load i32, i32* @X509V3_R_UNKNOWN_EXTENSION, align 4
  %15 = call i32 @X509V3err(i32 %13, i32 %14)
  store i32* null, i32** %4, align 8
  br label %22

16:                                               ; preds = %3
  %17 = load i32*, i32** %8, align 8
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %6, align 4
  %20 = load i8*, i8** %7, align 8
  %21 = call i32* @do_ext_i2d(i32* %17, i32 %18, i32 %19, i8* %20)
  store i32* %21, i32** %4, align 8
  br label %22

22:                                               ; preds = %16, %12
  %23 = load i32*, i32** %4, align 8
  ret i32* %23
}

declare dso_local i32* @X509V3_EXT_get_nid(i32) #1

declare dso_local i32 @X509V3err(i32, i32) #1

declare dso_local i32* @do_ext_i2d(i32*, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
